--- a/style.css
+++ b/style.css
@@ -16,11 +16,17 @@ p {
     font-style: italic;
     text-align: center;
     padding: 50px;
-    margin: 100px;
+    margin: 100px; 
 }
 
 span {
     font-weight: bold;
+}
+
+.shadowp {
+    text-shadow: 2px 2px 4px forestgreen;
+    text-align: center;
+    font-size: 24px;
 }
 
 .wiki_image {
